# ludum-dare-50

./: Makefile  README.md  cabal.project  credits.txt  ludum-dare.cabal  tordle.cabal
app/: Main.hs
assets/: attach.jfxr  credits.txt  grey.jfxr  lose.jfxr  move.jfxr  not-a-word.jfxr  win-1.jfxr  win-2.jfxr  win-3.jfxr  win-4.jfxr  win-5.jfxr  yellow.jfxr
src/: Loop.hs  LudumDare.hs  Tordle.hs
src/Data/Function/: Extra.hs
src/Linear/: Extra.hs
src/Loop/: Asterius.hs  Shim.hs
src/Reactive/Banana/: Extra.hs
src/SDL/: Asterius.hs  Extra.hs  Shim.hs  Stub.hs
src/SDL/Font/: Asterius.hs  Shim.hs  Stub.hs
src/SDL/Mixer/: Asterius.hs  Shim.hs  Stub.hs
src/SDL/Primitive/: Asterius.hs  Shim.hs  Stub.hs
src/SDL/Video/: Asterius.hs  Shim.hs  Stub.hs
src/SDL/Video/Asterius/: Types.hs
src/SDL/Video/Renderer/: Asterius.hs  Shim.hs  Stub.hs
src/SDL/Video/Shim/: Types.hs
src/SDL/Video/Stub/: Types.hs
src/System/Random/: Asterius.hs  Shim.hs
src/System/Random/Stateful/: Stub.hs
src/Tordle/: Assets.hs  Colors.hs  Dir.hs  Draw.hs  Frp.hs  Guess.hs  Model.hs  Polynomino.hs  Rng.hs  Share.hs  Tetromino.hs
