cabal-version:      2.4
name:               ludum-dare
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

category: Game

library
    exposed-modules:  LudumDare

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                    , sdl2
    hs-source-dirs:   src
    default-language: Haskell2010

executable ludum-dare-50
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0,
        ludum-dare

    hs-source-dirs:   app
    default-language: Haskell2010
