cabal-version:      2.4
name:               tordle
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A game combining Tetris and Wordle.

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

category: Game

library
    exposed-modules:  Tordle
                    , Tordle.Assets
                    , Tordle.Colors
                    , Tordle.Dir
                    , Tordle.Draw
                    , Tordle.Frp
                    , Tordle.Guess
                    , Tordle.Model
                    , Tordle.Polynomino
                    , Tordle.Rng
                    , Tordle.Share
                    , Tordle.Tetromino
                    , Data.Function.Extra
                    , Linear.Extra
                    , Reactive.Banana.Extra
                    , SDL.Extra
                    , SDL.Font.Stub
                    , SDL.Stub
                    , SDL.Mixer.Stub
                    , SDL.Primitive.Stub
                    , SDL.Video.Stub
                    , SDL.Video.Stub.Types
                    , SDL.Video.Renderer.Stub
                    , System.Random.Stateful.Stub

    build-depends:    base
                    , StateVar
                    , containers
                    , extra
                    , generic-lens
                    , lens
                    , linear
                    , mtl
                    , random
                    , reactive-banana >= 1.3.0.0
                    , text
                    , these
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -W -Wall

executable tordle
    main-is:          Main.hs

    build-depends:    base
                    , tordle

    hs-source-dirs:   app
    default-language: Haskell2010
