cabal-version:      2.4
name:               tordle
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A game combining Tetris and Wordle.

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

category: Game

library
    exposed-modules:  Tordle
                    , Tordle.Assets
                    , Tordle.Colors
                    , Tordle.Dir
                    , Tordle.Draw
                    , Tordle.Frp
                    , Tordle.Guess
                    , Tordle.Model
                    , Tordle.Polynomino
                    , Tordle.Rng
                    , Tordle.Share
                    , Tordle.Tetromino
                    , Data.Function.Extra
                    , Linear.Extra
                    , Loop.Shim
                    , Reactive.Banana.Extra
                    , SDL.Extra
                    , SDL.Font.Shim
                    , SDL.Shim
                    , SDL.Mixer.Shim
                    , SDL.Primitive.Shim
                    , SDL.Video.Shim
                    , SDL.Video.Shim.Types
                    , SDL.Video.Renderer.Shim

    build-depends:    base
                    , StateVar
                    , containers
                    , extra
                    , generic-lens
                    , lens
                    , linear
                    , mtl
                    , random >= 1.2
                    , reactive-banana >= 1.3.0.0
                    , text
                    , these
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -W -Wall

executable tordle-exe
    main-is:          Main.hs

    build-depends:    base
                    , tordle

    hs-source-dirs:   app
    default-language: Haskell2010
