cabal-version:      2.4
name:               tordle
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A game combining Tetris and Wordle.

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

category: Game

flag asterius
  description: Whether we're compiling with ahc-ghc (true) or ghc (false).
  default: false
  manual: true

library
    exposed-modules:  Tordle
                    , Tordle.Assets
                    , Tordle.Colors
                    , Tordle.Dir
                    , Tordle.Draw
                    , Tordle.Frp
                    , Tordle.Guess
                    , Tordle.Model
                    , Tordle.Polynomino
                    , Tordle.Rng
                    , Tordle.Share
                    , Tordle.Tetromino
                    , Data.Function.Extra
                    , Linear.Extra
                    , Loop
                    , Loop.Shim
                    , Reactive.Banana.Extra
                    , SDL.Extra
                    , SDL.Font.Shim
                    , SDL.Shim
                    , SDL.Mixer.Shim
                    , SDL.Primitive.Shim
                    , SDL.Video.Shim
                    , SDL.Video.Renderer.Shim
                    , System.Random.Shim
    if flag(asterius)
      exposed-modules:  Loop.Asterius
                      , SDL.Font.Asterius
                      , SDL.Asterius
                      , SDL.Mixer.Asterius
                      , SDL.Primitive.Asterius
                      , SDL.Video.Asterius
                      , SDL.Video.Asterius.Types
                      , SDL.Video.Renderer.Asterius
                      , System.Random.Asterius

    build-depends:    base
                    , StateVar
                    , containers
                    , extra
                    , generic-lens
                    , lens
                    , linear
                    , mtl
                    , random >= 1.2
                    , reactive-banana >= 1.3.0.0
                    , text
                    , these
                    , transformers
    if !flag(asterius)
      build-depends: sdl2
                   , sdl2-gfx
                   , sdl2-ttf
                   , sdl2-mixer

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -W -Wall

executable tordle-exe
    main-is:          Main.hs

    build-depends:    base
                    , tordle

    hs-source-dirs:   app
    default-language: Haskell2010
